--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,21 @@
-.App {
+.app {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.info-area {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #09d3ac;
+button {
+  background-color: grey;
+}
+
+input {
+  border: 1px solid black;
+}
+
+span {
+  background-color: lightgreen;
 }
